Finished sect. 2 plus side photos.

--- a/index.html
+++ b/index.html
@@ -52,13 +52,59 @@
 
 <section class="photos">
 
- <img src="./resources/images/information-main2.jpg" alt="Male student reading book outdoors">
+     <div class="practicing">
+       <img src="./resources/images/information-main2.jpg" alt="Male student
+           reading book outdoors">
+    <h1>It doesn't hurt to keep practicing</h1>
 
- <div class="practicing">
+<p>Quodsi malorum eleifend te has. Et clita affert
+     putant cum, sea cu aperiam<br> salutatus. Ea per
+     appellantur vituperatoribus. Et nisl vidit
+     eirmod eam.<br> Pro et quod probo delicatissimi,
+     albucius voluptaria accommodare est id.<p>
 
-   <div class="practicing-hl"<h1>It doesn't hurt to keep practicing</h1></div>
+    <p><q><br>Emmanuel, Sr Strategist at
+      Hiring.com</q></p>
+ </div>
 
-</div>
+
+ <div class="threepics">
+   <div class="three-one">
+    <img src="./resources/images/information-orientation.jpg" alt=" overhead
+      view of students walking on campus.">
+      <div class="three-one txt">
+        <h3>Orientation date</h3>
+        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+        <span><a href="#">Read More</a></span>
+      </div>
+    </div>
+
+    <div class="three-two">
+      <img src="./resources/images/information-campus.jpg" alt=" campus
+        study room.">
+        <div class="three-two txt">
+        <h3>Our campus</h3>
+        <p>Find which campus is close by you</p>
+        <span><a href="#">Read More</a></span>
+     </div>
+   </div>
+
+    <div class="three-three">
+      <img src="./resources/images/information-guest-lecture.jpg"alt="casual
+      portrait of guest lecturer.">
+      <div class="three-three txt">
+      <h3>Our guest lecture</h3>
+      <p>Join a keynote with Oliver Sack<br>
+        about music in medical treatment</p>
+        <span><a href="#">Read More</a></span>
+    </div>
+  </div>
+
+
+
+
+
+  </div>
 </section>
 
 
