--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header>
     <div class = "logo">
-       <img src="./resources/images/ic-logo.svg" alt="School logo" alt="School logo">
+       <img src="./resources/images/ic-logo.svg" alt="School logo" alt="School logo"/>
        <h2 class="title-bar">COLMAR<span class="thin">ACADEMY</span></h2>
      </div>
 
@@ -34,7 +34,7 @@
   </header>
 
   <section class="everyday">
-    <img src="./resources/images/banner2.jpg" alt="Students Studying at the Academy">
+    <img src="./resources/images/banner2.jpg" alt="Students Studying at the Academy"/>
 
    <div class="learn">
     <div class="hl-big"<h1>Learn Something<br>
@@ -54,7 +54,7 @@
 
      <div class="practicing">
        <img src="./resources/images/information-main2.jpg" alt="Male student
-           reading book outdoors">
+           reading book outdoors"/>
     <h1>It doesn't hurt to keep practicing</h1>
 
 <p>Quodsi malorum eleifend te has. Et clita affert
@@ -71,7 +71,7 @@
  <div class="threepics">
    <div class="three-one">
     <img src="./resources/images/information-orientation.jpg" alt=" overhead
-      view of students walking on campus.">
+      view of students walking on campus."/>
       <div class="three-one txt">
         <h3>Orientation date</h3>
         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -81,7 +81,7 @@
 
     <div class="three-two">
       <img src="./resources/images/information-campus.jpg" alt=" campus
-        study room.">
+        study room."/>
         <div class="three-two txt">
         <h3>Our campus</h3>
         <p>Find which campus is close by you</p>
@@ -91,7 +91,7 @@
 
     <div class="three-three">
       <img src="./resources/images/information-guest-lecture.jpg"alt="casual
-      portrait of guest lecturer.">
+      portrait of guest lecturer."/>
       <div class="three-three txt">
       <h3>Our guest lecture</h3>
       <p>Join a keynote with Oliver Sack<br>
@@ -100,11 +100,71 @@
     </div>
   </div>
 
+</div>
+</section>
+
+<section class="startlearn">
+  <h1>Start Learning</h1>
+
+  <div class="photo-grid-container">
+  <div class="photo-grid">
+
+      <div class="photo-grid-item">
+        <img src="./resources/images/course-software2.jpg" alt="computer and software."/>
+        <h4>Software engineering</h4>
+        <p class="course">COURSES</p>
+        <p>Web Development, Mobile<br>
+            Development, iOT, APIs</p>
+      </div>
+
+      <div class="photo-grid-item">
+         <img src="./resources/images/course-computer-art2.jpg" alt="visual effects on a cellphone."/>
+           <h4>Computer art</h4>
+            <p class="course">COURSES</p>
+            <p>Imaging & Design, Web Design,<br>
+              Motion Graphics & Visual Effects,<br>
+              Computer Animation</p>
+      </div>
+
+      <div class="photo-grid-item">
+        <img src="./resources/images/course-design2.jpg" alt="student using camera for design"./>
+        <h4>Design</h4>
+          <p class="course">COURSES</p>
+          <p>User Experience Design, User<br>
+             Research, Visual Design</p>
+
+      </div>
+
+      <div class="photo-grid-item">
+        <img src="./resources/images/course-data2.jpg" alt="laptop computer."/>
+        <h4>Data</h4>
+          <p class="course">COURSES</p>
+          <p> Data Science, Big Data, SQL, Data<br>
+            Visualization</p>
+      </div>
+
+      <div class="photo-grid-item">
+        <img src="./resources/images/course-business2.jpg" alt="Chess pieces signifying business decisions."/>
+        <h4>Business</h4>
+        <p class="course">COURSES</p>
+        <p>Product Development, Business<br>
+           Development, Startup</p>
+      </div>
+
+      <div class="photo-grid-item">
+        <img src="./resources/images/course-marketing2.jpg" alt="Looking at data on a smartwatch."/>
+        <h4>Marketing</h4>
+        <p class="course">COURSES</p>
+        <p>Analytics, Content Marketing,<br>
+            Mobile Marketing</p>
+      </div>
 
 
 
 
-  </div>
+
+</div>
+</div>
 </section>
 
 
