--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 <body>
   <div class="site-container">
 
-  <header>
-    <div class = "logo">
-       <img src="./resources/images/ic-logo.svg" alt="School logo" alt="School logo"/>
-       <h2 class="title-bar">COLMAR<span class="thin">ACADEMY</span></h2>
-     </div>
+    <header>
+      <div class = "logo">
+         <img src="./resources/images/ic-logo.svg" alt="School logo" alt="School logo"/>
+         <h2 class="title-bar">COLMAR<span class="thin">ACADEMY</span></h2>
+       </div>
 
-     <nav class ="large">
-         <span><a href="#">On Campus</a></span>
-         <span class="vertblock"></span>
-         <span><a href="#">Online</a></span>
-         <span class="vertblock"></span>
-         <span><a href="#">For Companies</a></span>
-         <span class="vertblock"></span>
-         <span><a href="#">Sign in</a></span>
+       <nav class ="large">
+           <span><a href="#">On Campus</a></span>
+           <span class="vertblock"></span>
+           <span><a href="#">Online</a></span>
+           <span class="vertblock"></span>
+           <span><a href="#">For Companies</a></span>
+           <span class="vertblock"></span>
+           <span><a href="#">Sign in</a></span>
+        </nav>
 
-      </nav>
-  </header>
+    </header>
 
   <section class="everyday">
     <img src="./resources/images/banner2.jpg" alt="Students Studying at the Academy"/>
@@ -158,19 +158,54 @@
         <p>Analytics, Content Marketing,<br>
             Mobile Marketing</p>
       </div>
+   </div>
+ </div>
+</section>
 
+<section class="thesis">
+   <h1>Thesis Exhibit</h1>
+<div class="thesis-container">
+ <div class="exhibit">
 
+   <video src="./resources/images/thesis.mp4" width="625" controls=""></video>
 
+    <h3>Reimagine urban</h3>
 
+    <p>Vix ei dicat meliore rationibus, quot discere te sea. Mea ad delenit perpetua,<br>
+       quaerendum reprehendunt per ex. At eum affert nemore melius, mel ei dictas perfecto<br>
+      constituto. Ei mei populo putent perfecto.</p>
+ </div>
 
+ <div class="fisma">
+   <div class="fisma-item1">
+   <img src="./resources/images/thesis-fisma.jpg">
+   <div class="fis1-txt">
+   <h3>Fisma: Design and<br>Developent</h3>
+   <p>Designer showcase of new<br> prototype product</p>
+ </div>
+ </div>
+ <div class="now-then">
+   <img src="./resources/images/thesis-now-and-then.jpg">
+    <div class="nt-text">
+   <h3>Now and then</h3>
+  <p>Research study about New York</p>
+</div>
+</div>
 </div>
 </div>
 </section>
 
+<footer>
 
+<div class="copyright">
+<span><p>&copy 2016 Colmar Academy. All rights reserved</p></span>
+</div>
+<div class="terms">
+<span>Terms</span>
+<span>Privacy</span>
+</div>
 
-
-
+</footer>
 </div>
 </body>
 </html>
