Finish code for project.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="initial-scale=1.0">
   <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <title>Colmar Academy</title>
-
 </head>
 
 <body>
@@ -21,7 +21,8 @@
          <h2 class="title-bar">COLMAR<span class="thin">ACADEMY</span></h2>
        </div>
 
-       <nav class ="large">
+       <nav>
+          <div class="large">
            <span><a href="#">On Campus</a></span>
            <span class="vertblock"></span>
            <span><a href="#">Online</a></span>
@@ -29,25 +30,33 @@
            <span><a href="#">For Companies</a></span>
            <span class="vertblock"></span>
            <span><a href="#">Sign in</a></span>
-        </nav>
+         </div>
 
+         <div class="small">
+           <span<a href="#"></a><img src="./resources/images/ic-logo.svg"></span>
+           <span<a href="#"></a><img src="./resources/images/ic-on-campus.svg"></span>
+           <span<a href="#"></a><img src="./resources/images/ic-online.svg"></span>
+           <span<a href="#"></a><img src="./resources/images/ic-login.svg"></span>
+         </div>
+        </nav>
     </header>
 
   <section class="everyday">
+    <div class="students">
     <img src="./resources/images/banner2.jpg" alt="Students Studying at the Academy"/>
-
+  </div>
    <div class="learn">
-    <div class="hl-big"<h1>Learn Something<br>
-      New Everyday</h1></div>
+    <div class="hl-big"><h1>Learn Something<br />
+      New Everyday</h1>
+    </div>
 
-    <div class="hl-sml"<h3>Lorem ipsum dolor sit amet,<br>
-      consectetur adipiscing elit.</h3></div>
+    <div class="hl-sml"><h3>Lorem ipsum dolor sit amet,<br />
+      consectetur adipiscing elit.</h3>
+    </div>
 
      <div class="btn"<span><p>Start Here</p></span></div>
 
-
    </div>
-
 </section>
 
 <section class="photos">
@@ -61,9 +70,9 @@
      putant cum, sea cu aperiam<br> salutatus. Ea per
      appellantur vituperatoribus. Et nisl vidit
      eirmod eam.<br> Pro et quod probo delicatissimi,
-     albucius voluptaria accommodare est id.<p>
+     albucius voluptaria accommodare est id.</p>
 
-    <p><q><br>Emmanuel, Sr Strategist at
+    <p><q><br >Emmanuel, Sr Strategist at
       Hiring.com</q></p>
  </div>
 
@@ -72,26 +81,36 @@
    <div class="three-one">
     <img src="./resources/images/information-orientation.jpg" alt=" overhead
       view of students walking on campus."/>
+      <div class="three-one-mobile">
+        <img src="./resources/images/information-orientation-mobile.jpg" alt=" overhead
+          view of students walking on campus."/>
       <div class="three-one txt">
         <h3>Orientation date</h3>
         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
         <span><a href="#">Read More</a></span>
+      </div>
       </div>
     </div>
 
     <div class="three-two">
       <img src="./resources/images/information-campus.jpg" alt=" campus
         study room."/>
+      <div class="three-two-mobile">
+        <img src="./resources/images/information-campus-mobile.jpg" alt="campus study room"/>
+
         <div class="three-two txt">
         <h3>Our campus</h3>
         <p>Find which campus is close by you</p>
         <span><a href="#">Read More</a></span>
      </div>
    </div>
-
+</div>
     <div class="three-three">
       <img src="./resources/images/information-guest-lecture.jpg"alt="casual
       portrait of guest lecturer."/>
+  <div class="three-three-mobile">
+    <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="
+      casual portrait of guest lecturer"/>
       <div class="three-three txt">
       <h3>Our guest lecture</h3>
       <p>Join a keynote with Oliver Sack<br>
@@ -111,51 +130,51 @@
 
       <div class="photo-grid-item">
         <img src="./resources/images/course-software2.jpg" alt="computer and software."/>
-        <h4>Software engineering</h4>
+        <a href="#">Software engineering</a>
         <p class="course">COURSES</p>
-        <p>Web Development, Mobile<br>
+        <p>Web Development, Mobile<br />
             Development, iOT, APIs</p>
       </div>
 
       <div class="photo-grid-item">
          <img src="./resources/images/course-computer-art2.jpg" alt="visual effects on a cellphone."/>
-           <h4>Computer art</h4>
+           <a href="#">Computer art</a>
             <p class="course">COURSES</p>
-            <p>Imaging & Design, Web Design,<br>
-              Motion Graphics & Visual Effects,<br>
+            <p>Imaging & Design, Web Design,<br />
+              Motion Graphics & Visual Effects,<br />
               Computer Animation</p>
       </div>
 
       <div class="photo-grid-item">
         <img src="./resources/images/course-design2.jpg" alt="student using camera for design"./>
-        <h4>Design</h4>
+        <a href="#">Design</a>
           <p class="course">COURSES</p>
-          <p>User Experience Design, User<br>
+          <p>User Experience Design, User<br />
              Research, Visual Design</p>
 
       </div>
 
       <div class="photo-grid-item">
         <img src="./resources/images/course-data2.jpg" alt="laptop computer."/>
-        <h4>Data</h4>
+        <a href="#">Data</a>
           <p class="course">COURSES</p>
-          <p> Data Science, Big Data, SQL, Data<br>
+          <p> Data Science, Big Data, SQL, Data<br />
             Visualization</p>
       </div>
 
       <div class="photo-grid-item">
         <img src="./resources/images/course-business2.jpg" alt="Chess pieces signifying business decisions."/>
-        <h4>Business</h4>
+        <a href="#">Business</a>
         <p class="course">COURSES</p>
-        <p>Product Development, Business<br>
+        <p>Product Development, Business<br />
            Development, Startup</p>
       </div>
 
       <div class="photo-grid-item">
         <img src="./resources/images/course-marketing2.jpg" alt="Looking at data on a smartwatch."/>
-        <h4>Marketing</h4>
+        <a href="#">Marketing</a>
         <p class="course">COURSES</p>
-        <p>Analytics, Content Marketing,<br>
+        <p>Analytics, Content Marketing,<br />
             Mobile Marketing</p>
       </div>
    </div>
@@ -167,12 +186,17 @@
 <div class="thesis-container">
  <div class="exhibit">
 
-   <video src="./resources/images/thesis.mp4" width="625" controls=""></video>
+   <!-- <video src="./resources/images/thesis.mp4" width="625" controls=""></video> -->
+   <div class="media-container">
+          <video src="resources/images/thesis.mp4" controls>
+            Video could not be loaded.
+          </video>
+        </div>
 
     <h3>Reimagine urban</h3>
 
-    <p>Vix ei dicat meliore rationibus, quot discere te sea. Mea ad delenit perpetua,<br>
-       quaerendum reprehendunt per ex. At eum affert nemore melius, mel ei dictas perfecto<br>
+    <p>Vix ei dicat meliore rationibus, quot discere te sea. Mea ad delenit perpetua,<br />
+       quaerendum reprehendunt per ex. At eum affert nemore melius, mel ei dictas perfecto<br />
       constituto. Ei mei populo putent perfecto.</p>
  </div>
 
@@ -206,6 +230,6 @@
 </div>
 
 </footer>
-</div>
+</div><!-- Close site-container -->
 </body>
 </html>
