finalize html and css for project.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-
+<!-- Final HTML for Colmar Academy project -->
 <head>
 
   <meta name="viewport" content="initial-scale=1.0">
